# Option_Alpha_3

./: .coderabbit.yaml  .gitignore  pyproject.toml  start.bat
.claude/: settings.json
.claude/commands/: verify.md
.claude/hooks/: pre-commit-guard.sh
.claude/rules/: pre-commit-workflow.md
.claude/scripts/: claude-md-compliance.py  verify.sh
src/Option_Alpha/: __init__.py  cli.py  logging_config.py
src/Option_Alpha/agents/: __init__.py  _parsing.py  bear.py  bull.py  context_builder.py  fallback.py  llm_client.py  model_config.py  orchestrator.py  risk.py
src/Option_Alpha/analysis/: CLAUDE.md  __init__.py  bsm.py  catalysts.py  contracts.py  direction.py  normalization.py  scoring.py
src/Option_Alpha/data/: __init__.py  database.py  repository.py
src/Option_Alpha/indicators/: __init__.py  moving_averages.py  options_specific.py  oscillators.py  trend.py  volatility.py  volume.py
src/Option_Alpha/models/: __init__.py  analysis.py  enums.py  health.py  market_data.py  options.py  scan.py
src/Option_Alpha/reporting/: __init__.py  disclaimer.py  formatters.py  markdown.py  terminal.py
src/Option_Alpha/services/: __init__.py  _helpers.py  cache.py  fred.py  health.py  market_data.py  options_data.py  rate_limiter.py  universe.py
src/Option_Alpha/utils/: __init__.py  exceptions.py
src/Option_Alpha/web/: __init__.py  app.py  deps.py  middleware.py  scan_pipeline.py  sse.py
tests/: conftest.py
tests/fixtures/: greeks_reference.json  option_chain.json  sample_prices.csv
tests/unit/: test_logging_config.py
tests/unit/agents/: test_bear.py  test_bull.py  test_context_builder.py  test_fallback.py  test_llm_client.py  test_orchestrator.py  test_parsing.py  test_parsing_extended.py  test_prompts.py  test_prompts_extended.py  test_risk.py
tests/unit/analysis/: test_bsm.py  test_catalysts.py  test_contracts.py  test_direction.py  test_direction_extended.py  test_normalization.py  test_scoring.py  test_scoring_extended.py
tests/unit/cli/: test_cli.py
tests/unit/data/: test_database.py  test_database_extended.py  test_repository.py
tests/unit/indicators/: test_moving_averages.py  test_moving_averages_extended.py  test_options_specific.py  test_oscillators.py  test_trend.py  test_volatility.py  test_volume.py  test_volume_extended.py
tests/unit/models/: test_analysis.py  test_analysis_extended.py  test_enums.py  test_health.py  test_market_data.py  test_market_data_extended.py  test_options.py  test_scan.py  test_scan_extended.py
tests/unit/reporting/: test_disclaimer.py  test_formatters.py  test_markdown.py  test_terminal.py
tests/unit/services/: test_cache.py  test_fred.py  test_health.py  test_helpers.py  test_market_data.py  test_options_data.py  (+4 more)
web/: .prettierrc  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
workflows/: pre-commit.md
(+131 files in other folders)
