[project]
name = "option-alpha"
version = "0.1.0"
description = "AI-powered options analysis tool with multi-agent debate"
readme = "README.md"
authors = [
    { name = "jobu711", email = "jobu711@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "scipy>=1.17.0",
    "yfinance>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/Option_Alpha"]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "scipy-stubs>=1.17.0.2",
]
